--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "firebase": "8.10.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-full-screen": "^1.1.1",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
     "react-redux-firebase": "^3.0.0",
